styles/main-styles.css
/* Root styles */
:root {
    --white: #FFF;
    --black: #323232;
    --green: #417B5A;
    --dark-green: #275239;
    --orange: #FF8F00;
    --yellow: #FFC107;
    --warning: #FF4242;
    --background: #F5EFED;
    --grey: #AEAEAE;
}
* {
    font-family: 'Plus Jakarta Sans';
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent; 
}

body {
    font-family: 'Plus Jakarta Sans', sans-serif;
    background-color: var(--background);
    margin: 0;
    padding: 20px;
}

header {
    background-color: var(--background);
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    padding-top: 70px;
}

h1 {
    font-weight: 500;
    font-size: 1.5rem;
    margin: 0;
}

h2 {
    font-weight: 500;
    font-size: 1.25rem;
}

section {
    height: 100vh;
}

.bold {
    font-weight: 700;
}

.center {
    text-align: center;
}

/* Button styling */

button {
  background: var(--green);
  color: var(--white);
  width: 119px;
  height: 50px;
  border: none;
  padding: 15px;
  border-radius: 8px;
  font-size: 1rem;
  font-weight: 700;
  touch-action: manipulation;
  transition: all 0.2s ease;
}

button:disabled {
  background: var(--grey);
  transform: none;
  box-shadow: none;
  cursor: not-allowed;
}

/* ---- */

.time-container, .difficulty-container, .timer-container, .challenge-timer-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}

.difficulty-text {
    font-size: 0.8rem;
}

.selection-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.screen {
    display: none;
}
.screen.active {
    display: block;
}
.time-buttons, .difficulty-buttons {
    display: flex;
    gap: 10px;
}

.time-buttons input[type="radio"], 
.difficulty-buttons input[type="radio"] {
    display: none;
}

.time-buttons label, 
.difficulty-buttons label {
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid var(--black);
    width: 80px;
    height: 45px;
    border-radius: 1.25rem;
    cursor: pointer;
    transition: all 0.2s;
}

.time-buttons input[type="radio"]:checked + label,
.difficulty-buttons input[type="radio"]:checked + label {
    background: var(--green);
    color: var(--background);
    border-color: var(--green);
}

.create-route-button-container {
    display: flex;
    justify-content: center;
}

#start-screen-container {
    height: 100vh;
    display: flex;
    flex-direction: column;
    gap: 50px;
    justify-content: flex-start;
    padding-top: 50px;
}

.selection-wrapper {
    display: flex;
    flex-direction: column;
    gap: 52px;
}

